<resources>
    <string name="app_name">My  Calculator</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="symbol_.">.</string>
    <string name="number_0">0</string>
    <string name="_percent">%</string>
    <string name="_comma">,</string>
    <string name="symbol_minus">-</string>
    <string name="symbol_plus">+</string>
    <string name="symbol_equals">=</string>
    <string name="button_delete">C</string>
    <string name="symbol_division">÷</string>
    <string name="number_multiplication">×</string>
    <string name="button_delete1">«</string>
    <string name="button_plus">+</string>
    <string name="button_equals">=</string>
    <string name="starting_value">0</string>
</resources>