<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/result"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/starting_value"
        android:textAlignment="textEnd"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_division"
        app:layout_constraintStart_toStartOf="@id/result"
        app:layout_constraintTop_toBottomOf="@id/result" />

    <Button
        android:id="@+id/button_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symbol_division"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@id/button_c"
        app:layout_constraintTop_toTopOf="@id/button_c" />

    <Button
        android:id="@+id/button_multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_multiplication"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@id/button_division"
        app:layout_constraintTop_toTopOf="@id/button_c" />

    <Button
        android:id="@+id/button_delete1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete1"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@id/button_multiplication"
        app:layout_constraintTop_toTopOf="@id/button_c" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_7"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="@id/button_c"
        app:layout_constraintTop_toBottomOf="@id/button_c" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_8"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintTop_toTopOf="@id/button_7" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_9"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@id/button_8"
        app:layout_constraintTop_toTopOf="@id/button_8" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symbol_minus"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@id/button_9"
        app:layout_constraintTop_toTopOf="@id/button_7" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_4"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="@id/button_7"
        app:layout_constraintTop_toBottomOf="@id/button_7" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_5"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintTop_toTopOf="@id/button_4" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_6"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@id/button_5"
        app:layout_constraintTop_toTopOf="@id/button_5" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_plus"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@id/button_6"
        app:layout_constraintTop_toTopOf="@id/button_6" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_1"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="@id/button_4"
        app:layout_constraintTop_toBottomOf="@id/button_4" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_2"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@id/button_1"
        app:layout_constraintTop_toTopOf="@id/button_1" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_3"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@id/button_2"
        app:layout_constraintTop_toTopOf="@id/button_2" />

    <Button
        android:id="@+id/button_equals"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/button_equals"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@id/comma"
        app:layout_constraintStart_toStartOf="@id/button_plus"
        app:layout_constraintTop_toTopOf="@id/button_3" />

    <Button
        android:id="@+id/button_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_percent"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="@id/button_1"
        app:layout_constraintTop_toBottomOf="@id/button_1" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_0"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@id/button_percent"
        app:layout_constraintTop_toTopOf="@id/button_percent" />

    <Button
        android:id="@+id/comma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_comma"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@id/button_0"
        app:layout_constraintTop_toTopOf="@id/button_0" />

</androidx.constraintlayout.widget.ConstraintLayout>